
--Changed movement code so that track carts that pile up against obstacles
  (something beyond the end of a disconnnected track or another cart in the
  way) don't derail, but instead pile up.  Part of jasonrohrer/OneLifeData7#790

--DING message when your leader exiles or redeems you, showing you your new
  ally count after this action.  Part of #610



Version 336    2020-May-8

--Fixed disappearing adult glitch when an adult carries you far away from your
  pick-up location.






Server Fixes

--Fixed leader auto-heir code to pick the oldest direct follower instead of the
  oldest follower overall.  Old code resulted in loops in the leadership tree 
  that caused the client to get stuck in an infinite loop.




Version 334    2020-May-7

--When the last owner dies, property is automatically inherited by the oldest
  direct offspring of the owner, and if none exist, then the closest, oldest
  relative of the the owner.




Server Fixes

--Max baby/mom ratio 1.0 (was 2.0) and baby/adult ratio 1.0 (was 2.0).  When
  these ratios are met or surpassed, a new Eve is inserted.  During normal
  times, the ratios are more like 0.5 and 0.125, so the ratios only come into
  effect during server restart.  There have been too few Eves and baby overload
  after recent restarts, so these new settings should give us 2x more Eves.

--Min posse size cap 5 (was 3), which means that in places with 10 or more
  people, you need a posse of 5 to kill, and in places with 8 or 9 people, you
  need a posse of 4 to kill.  (Min posse fraction is 0.5 of the local
  population.)  This makes it harder for small groups to wage campaigns of
  terror.

--Only people old enough to join a posse (age 9, when they can say I JOIN YOU)
  are counted when computing min posse size.

--When a leader dies who is following no one, their oldest follower inherits
  their position.

--When counting area population to determine necessary posse size, we now count